--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.20.0",
     "core-js": "^2.6.5",
     "element-ui": "^2.13.2",
+    "json-bigint": "^1.0.0",
     "nprogress": "^0.2.0",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3"
